--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/images/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./src/css/font.css" />
 		<link rel="stylesheet" href="./src/css/reset.css" />
 		<title>APV - Administrador de pacientes</title>
 	</head>
